<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".presentation.SignUpFragment">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="134dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:src="@drawable/image_logo"
        android:contentDescription="logo" />

    <EditText
        android:id="@+id/edit_text_fragment_sign_up_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="25dp"
        android:autofillHints="username"
        android:background="@drawable/edit_text_background"
        android:hint="@string/fragment_sign_up_username_hint"
        android:inputType="text"
        android:padding="20dp" />

    <EditText
        android:id="@+id/edit_text_fragment_sign_up_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edit_text_background"
        android:hint="@string/fragment_sign_up_email_hint"
        android:inputType="textEmailAddress"
        android:padding="20dp" />

    <EditText
        android:id="@+id/edit_text_fragment_sign_up_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:autofillHints="password"
        android:background="@drawable/edit_text_background"
        android:hint="@string/fragment_sign_up_password_hint"
        android:inputType="textPassword"
        android:padding="20dp" />

    <EditText
        android:id="@+id/edit_text_fragment_sign_up_re_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:autofillHints="password"
        android:background="@drawable/edit_text_background"
        android:hint="@string/fragment_sign_up_password_hint"
        android:inputType="textPassword"
        android:padding="20dp" />

    <TextView
        android:id="@+id/text_view_fragment_sign_up_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/fragment_sign_up_forget_password"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_view_fragment_sign_up_error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="20dp"
        tools:text="@string/fragment_sign_up_forget_password"
        android:textColor="@color/error"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button_fragment_sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/sign_up_button_color"
        android:padding="15dp"
        android:text="@string/activity_authorization_button_sign_up"
        android:textSize="17sp"
        android:textStyle="bold"
        android:enabled="false"/>

    <TextView
        android:id="@+id/text_view_fragment_sign_up_link_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_sign_up_link_sign_in"
        android:textColor="@color/white"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        app:drawableStartCompat="@drawable/sign_up_left_rectangle"
        app:drawableEndCompat="@drawable/sign_up_right_rectangle"/>


</LinearLayout>