<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/bottom_player_layout"
        android:background="@color/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_view_activity_player_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:drawableStartCompat="@drawable/ic_arrow_back" />

        <TextView
            android:id="@+id/text_view_activity_player_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:drawableStartCompat="@drawable/ic_more_horiz" />

        <ImageView
            android:id="@+id/image_view_activity_player_poster"
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            tools:src="@drawable/music_player_poster"
            android:layout_marginVertical="32dp"
            app:layout_constraintTop_toBottomOf="@id/text_view_activity_player_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/activity_player_poster_description" />

        <TextView
            android:id="@+id/text_view_activity_player_music_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Taspa"
            android:textSize="20sp"
            android:textColor="@color/primary_text"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_view_activity_player_poster" />

        <TextView
            android:id="@+id/text_view_activity_player_music_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Dosekesh"
            android:textSize="18sp"
            android:textColor="@color/secondary_text"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_activity_player_music_title" />
        
        <LinearLayout
            android:id="@+id/layout_activity_player_seek_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingHorizontal="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_activity_player_music_author">

            <TextView
                android:id="@+id/text_view_activity_player_current_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_player_default_current_time"
                android:textSize="16sp"
                android:textColor="@color/secondary_text" />

            <SeekBar
                android:id="@+id/seek_bar_activity_player"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/text_view_activity_player_music_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_player_default_music_duration"
                android:textSize="16sp"
                android:textColor="@color/secondary_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_activity_player_controllers_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="32dp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_activity_player_seek_container">

            <TextView
                android:id="@+id/text_view_activity_player_previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                app:drawableStartCompat="@drawable/ic_previous" />

            <ImageView
                android:id="@+id/image_view_activity_player_play_pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:src="@drawable/ic_pause" />

            <TextView
                android:id="@+id/text_view_activity_player_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                app:drawableStartCompat="@drawable/ic_next" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>